 * qlog:
   * Refactor loggraphprovider so that the state and computed data is separated
     from the cache. Rename to loggraphviz.
   * Write lots of tests for loggraphviz.
   * Remove LogFilterProxyModel which improves performance.
   * --no-graph mode now shows nodes per revision, indented by merge depth.
   * Fix the layout of octopus merges. (Bug #489383)


0.19.1 - In development
-----------------------
Maintenance release.

 * Fix modeltest.py so that it works with Qt 4.7.
   (Bug #614123, Gary van der Merwe)
 * qrun: fixed '--execute' mode. (Bug #590229, Simon Kersey) 


0.19 "Shepherd's Tree, aka Boscia albitrunca" - 2010/08/05
----------------------------------------------------------
Bazaar 2.2 companion release. Suitable for bzr 2.2 and bzr 2.1.

Changes since 0.19b2 release:

 * qlog:
   * Context menu actions for tag, and revert will now show a branch menu if
     more than one branch is open. (Craig Hewetson, Gary van der Merwe)
   * Add context menu actions for update, cherry-pick, and reverse cherry-pick.
     (Bug #258360, Gary van der Merwe)
 * Language of GUI can be set in DEFAULT section of bazaar.conf 
   as ``language = code``. Language codes are the same as for LANG environment
   variable. Environment variable LANGUAGE still preferred over settings
   in bazaar.conf. (Alexander Belchenko)
 * Added Thai translation.


0.19 Beta 2 "Pomegranate" - 2010/07/01
--------------------------------------
 * Allow finding locale in system location on Linux
   (Bug #542429, Toshio Kuratomi).
 * Provide better text on Close and Ignore buttons when exceptions raised.
   (Bug #486946, Luis Arias)
 * Fix bug where Mac OS X windows start in background. (Bug #417162,
   Luis Arias)
 * Fix bug in treewidget where folders are repeated.
   (Bug #580798, Iwata, Gary van der Merwe)
 * qsubprocess: when sending error object over the stdout we should use
   unicode-escape encoding for the possible unicode/multiline strings.
   (Bug #570564, Alexander Belchenko)