@@ -470,13 +470,16 @@ class cmd_qlog(QBzrCommand):
     """
 
     takes_args = ['locations*']
-    takes_options = [ui_mode_option,
-                   	 Option('no-graph', help="Shows the log with no graph."),
-                    ]
+    takes_options = [
+        ui_mode_option,
+        Option('no-graph', help="Shows the log with no graph."),
+        Option('show-trees', help="Show working tree changes as a node in the graph"),
+        ]
 
-    def _qbzr_run(self, locations_list=None, ui_mode=False, no_graph=False):
+    def _qbzr_run(self, locations_list=None, ui_mode=False, no_graph=False,
+                  show_trees=False):
         window = LogWindow(locations_list, None, None, ui_mode=ui_mode,
-                           no_graph=no_graph)
+                           no_graph=no_graph, show_trees=show_trees)
         window.show()
         self._application.exec_()
 
